--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ TA class materials: <a href="taclass.html">here</a>
 		</div>
 		</li><li><div>
 		<span class="cvitem"> Scholarship</span> of Center for Theoretical Physics of the Universe, IBS
-		<span class="cvperiod">March 2014 ~ Present</span>		
+		<span class="cvperiod">March 2014 ~ June 2015</span>		
 		</div>
 		</li></ul>
 	</div>
@@ -181,21 +181,26 @@ TA class materials: <a href="taclass.html">here</a>
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
-		<span class="cvitem"> SangEun Han, Gil Young Cho, Eun-Gook Moon, </span>
+		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Topological Phase Transitions in Dirac semi-metals of distorted spinels”, <a href="http://arxiv.org/abs/1601.00975">arXiv:1702.XXXXX</a></div>
+		<div class="cvitemcontent"> “Topological Phase Transitions in Dirac semi-metals of distorted spinels”, <a href="http://arxiv.org/">arXiv:1709.XXXXX</a>
 		</li><li><div>
-		<span class="cvitem"> SangEun Han, Gil Young Cho, Eun-Gook Moon, </span>
+		<span class="cvitem"> SangEun Han and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Topological Phase Transitions in Line-nodal Superconductors”, <a href="http://arxiv.org/abs/1601.00975">arXiv:1601.00975</a></div>
+		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Chiral Symmetry Breakings in Topological Semi-metals”, <a href="http://arxiv.org/">arXiv:1707.XXXXX</a></div>
 		</li><li><div>
-		<span class="cvitem"> Sanjoy Biswas, Debtosh Chowdhury, Sangeun Han, Seung J. Lee, </span>
+		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework”, <a href="http://link.springer.com/article/10.1007%2FJHEP02(2015)142#page-1">10.1007/JHEP02(2015)142</a></div>
-		</li></ul>		
+		<div class="cvitemcontent"> “Topological Phase Transitions in Line-nodal Superconductors”, <a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. <b>B</b> 95, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv</a>)</div>
+		</li><li><div>
+		<span class="cvitem"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, Seung J. Lee, </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> “Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework”, <a href="https://doi.org/10.1007/JHEP02(2015)142">10.1007/JHEP02(2015)142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv</a>)</div>
+		</li></ul>
 	</div>
 <!-- Interests --><br>
 	<div>
@@ -246,9 +251,14 @@ Theotical Physics, Theoretical particle physics, Condensed matter physics, Quant
 		<span class="cvperiod"> September 2016 ~ December 2016 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Colloquium & Seminar </div>
+		</li><li><div>
+		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
+		<span class="cvperiod"> March 2017 ~ June 2017 </span>
+		</div>
+		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
 		</li></ul></ul>
 	</div>
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2017-02-11</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2017-07-08</div>
 
 </div>
 </body>
