--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ a:hover {text-decoration: underline; color: darkgray;}
 pdf version of CV: <a href="CV.html">here</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
+<br><br>
+Blog: <a href="/blog/">here</a>
 <!-- Academic Affiliations 
 -->
 	<div>
@@ -130,7 +132,7 @@ TA class materials: <a href="taclass.html">here</a>
 		</li><li>
 		<div>
 		<span class="cvitem"> Hankuk University of Foreign Studies </span>, Seoul, Korea
-		<span class="cvperiod"> March 2006 ~ January 2010</span>
+		<span class="cvperiod"> March 2006 ~ January 2008</span>
 		</div>
 		<div class="cvitemcontent"> Undergraduate Student in Department of Physics</div>
 		<div class="cvitemcontent"> Cumulative GPA : 4.18/4.5</div>
