--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@ Blog: <a href="/blog/">here</a>
 	<div class="cvitemize"> Education </div>
 		<ul>
 		<li><div>
-		<span class="cvitem"> KAIST </span>, Daejeon, Korea
+		<span class="cvitem"> Korea Advanced Institute of Science and Technology </span>, Daejeon, Korea
 		<span class="cvperiod">March 2013 ~ May 2015</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program</div>
 		<div class="cvitemcontent"> Cumulative GPA:4.16/4.3</div>
 		</li><li>
 		<div>
-		<span class="cvitem"> KAIST </span>, Daejeon, Korea
+		<span class="cvitem"> Korea Advanced Institute of Science and Technology </span>, Daejeon, Korea
 		<span class="cvperiod"> Feburary 2010 ~ Feburary 2013</span>
 		</div>
 		<div class="cvitemcontent"> B.S. in Physics, Magna Cum Laude, Feburary, 2013</div>
