--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Blog: <a href="/blog/">here</a>
 		<li><span class="cvitem"> Department of Physics, KAIST </span>
 		<span class="cvperiod">March 2013 ~ Present</span>
 		</div>
-		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program</div>	
+		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics</div>	
 		</li></ul>	
 	</div>
 <!-- Education --><br>
