--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@ Theotical Physics, Theoretical particle physics, Condensed matter physics, Quant
 		<span class="cvperiod"> March 2017 ~ June 2017 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
+		</li><li><div>
+		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
+		<span class="cvperiod"> September 2017 ~ December 2017 </span>
+		</div>
+		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 2 </div>
 		</li></ul></ul>
 	</div>
 <div style="font-size:75%" id="last">since 2014-12-31 / last update 2017-07-08</div>
