--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvitem"> SangEun Han and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Chiral Symmetry Breakings in Topological Semi-metals”, <a href="http://arxiv.org/">arXiv:1707.XXXXX</a></div>
+		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators”, <a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a></div>
 		</li><li><div>
 		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
@@ -258,9 +258,15 @@ Theotical Physics, Theoretical particle physics, Condensed matter physics, Quant
 		<span class="cvperiod"> March 2017 ~ June 2017 </span>
 		</div>
 		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
+		</li><li><div>
+		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
+		<span class="cvperiod"> September 2017 ~ December 2017 </span>
+		</div>
+		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 2 </div>
 		</li></ul></ul>
 	</div>
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2017-07-08</div>
+	
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2018-02-28</div>
 
 </div>
 </body>
