--- a/index.html
+++ b/index.html
@@ -183,25 +183,30 @@ Blog: <a href="/blog/">here</a>
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
+		<span class="cvitem"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> “Emergent Anisotropic Non-Fermi Liquid”, <a href="https://arxiv.org/">arXiv:1808.XXXXX</a>
+		</li><li><div>
 		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Topological Phase Transitions in Dirac semi-metals of distorted spinels”, <a href="http://arxiv.org/">arXiv:1709.XXXXX</a>
+		<div class="cvitemcontent"> “Quantum Criticalities with Infinite Anisotropy in Topological Phase Transitions between Dirac and Weyl Semi-metals”, <a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>
 		</li><li><div>
 		<span class="cvitem"> SangEun Han and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators”, <a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a></div>
+		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators”, <a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. <b>B</b> 97, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
 		</li><li><div>
 		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Topological Phase Transitions in Line-nodal Superconductors”, <a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. <b>B</b> 95, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv</a>)</div>
+		<div class="cvitemcontent"> “Topological Phase Transitions in Line-nodal Superconductors”, <a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. <b>B</b> 95, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
 		</li><li><div>
 		<span class="cvitem"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, Seung J. Lee, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework”, <a href="https://doi.org/10.1007/JHEP02(2015)142">10.1007/JHEP02(2015)142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv</a>)</div>
+		<div class="cvitemcontent"> “Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework”, <a href="https://doi.org/10.1007/JHEP02(2015)142">10.1007/JHEP02(2015)142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
 		</li></ul>
 	</div>
 <!-- Interests --><br>
