--- a/index.html
+++ b/index.html
@@ -196,25 +196,25 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvitem"> SangEun Han and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators”, <a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. <b>B</b> 97, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+		<div class="cvitemcontent"> “Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators”, <a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
 		</li><li><div>
 		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Topological Phase Transitions in Line-nodal Superconductors”, <a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. <b>B</b> 95, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
+		<div class="cvitemcontent"> “Topological Phase Transitions in Line-nodal Superconductors”, <a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
 		</li><li><div>
-		<span class="cvitem"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, Seung J. Lee, </span>
+		<span class="cvitem"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, and Seung J. Lee, </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> “Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework”, <a href="https://doi.org/10.1007/JHEP02(2015)142">10.1007/JHEP02(2015)142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
+		<div class="cvitemcontent"> “Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework”, <a href="https://doi.org/10.1007/JHEP02(2015)142">J. High Energy Phys. 02, 142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
 		</li></ul>
 	</div>
 <!-- Interests --><br>
 	<div>
-	<div class="cvitemize"> Interests </div>
+	<div class="cvitemize"> Research Interests </div>
 		<ul>
 		<li><div class="cvitemcontent"> 
-Theotical Physics, Theoretical particle physics, Condensed matter physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), etc.</div></li></ul>
+Theotical Physics, Condensed matter physics, Strongly correlated systems, Theoretical particle physics, Quantum field theory, Mathematical physics, Statistical physics (equilibrium or non-equilibrium), Quantum spin liquids, Quantum chaos, SYK physics, etc.</div></li></ul>
 	</div>
 <!-- Teaching Experiences --><br>
 	<div>
