--- a/index.html
+++ b/index.html
@@ -187,30 +187,30 @@ Blog: <a href="/blog/">here</a>
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
-		<span class="cvitem"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min </span>
+		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> "Emergent Anisotropic Non-Fermi Liquid", <br><a href="https://arxiv.org/">arXiv:1808.XXXXX</a>
+		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/">arXiv:1808.XXXXX</a>
 		</li><li><div>
-		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
+		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals", <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)
+		<div class="cvitemcontent"> SangEun Han, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)
 		</li><li><div>
-		<span class="cvitem"> SangEun Han and Eun-Gook Moon, </span>
+		<span class="cvitem"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators", <br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+		<div class="cvitemcontent"> SangEun Han and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
 		</li><li><div>
-		<span class="cvitem"> SangEun Han, Gil Young Cho, and Eun-Gook Moon, </span>
+		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> "Topological Phase Transitions in Line-nodal Superconductors", <br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
+		<div class="cvitemcontent"> SangEun Han, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
 		</li><li><div>
-		<span class="cvitem"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, and Seung J. Lee, </span>
+		<span class="cvitem"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework", <br><a href="https://doi.org/10.1007/JHEP02(2015)142">J. High Energy Phys. 02, 142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
+		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">J. High Energy Phys. 02, 142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
 		</li></ul>
 	</div>
 <!-- Interests --><br>
