--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Blog: <a href="/blog/">here</a>
 		<ul>
 		<li><div>
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology </span>, Daejeon, Korea
-		<span class="cvperiod">March 2013 ~ May 2015</span>
+		<span class="cvperiod">March 2013 ~ Present</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics</div>
 		<div class="cvitemcontent"> Cumulative GPA:4.16/4.3</div>
@@ -190,7 +190,7 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/">arXiv:1808.XXXXX</a>
+		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/">arXiv:1809.XXXXX</a>
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
