--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvperiod">March 2013 ~ Present</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics</div>
-		<div class="cvitemcontent"> Cumulative GPA:4.16/4.3</div>
+		<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>
 		</li><li>
 		<div>
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology </span>, Daejeon, Korea
@@ -127,7 +127,7 @@ Blog: <a href="/blog/">here</a>
 		</div>
 		<div class="cvitemcontent"> B.S. in Physics, Magna Cum Laude, Feburary, 2013</div>
 		<div class="cvitemcontent"> Second major : Mathematical Sciences</div>
-		<div class="cvitemcontent"> Cumulative GPA :3.79/4.3</div>		
+		<div class="cvitemcontent"> Cumulative GPA : 3.79/4.3</div>		
 	
 		</li><li>
 		<div>
@@ -156,20 +156,24 @@ Blog: <a href="/blog/">here</a>
 	<div>
 	<div class="cvitemize"> Awards </div>
 		<ul><li><div>
-		<span class="cvitem"> 2011 Fall Semester's FDC Award, Presidential Design Award </span>
-		<span class="cvperiod"> Feburary 2012</span>
+		<span class="cvitem"> 2018 Workshop on Spin-orbit Coupled Topological states Outstanding Poster Award </span>
+		<span class="cvperiod"> October 2018</span>
 		</div>		
 		</li><li><div>
-		<span class="cvitem"> 2011 Collegiate Engineering Mathematics Competition Bronze </span>
-		<span class="cvperiod"> December 2011</span>
+		<span class="cvitem"> 2018 Pre-doctoral Fellow of Physics at KAIST </span>
+		<span class="cvperiod"> August 2018</span>
 		</div>		
 		</li><li><div>
 		<span class="cvitem"> 2014 Spring Outstanding Teaching Assistant Awards </span>
 		<span class="cvperiod"> September 2014</span>
 		</div>		
 		</li><li><div>
-		<span class="cvitem"> 2018 Pre-doctoral Fellow of Physics at KAIST </span>
-		<span class="cvperiod"> August 2018</span>
+		<span class="cvitem"> 2011 Collegiate Engineering Mathematics Competition Bronze </span>
+		<span class="cvperiod"> December 2011</span>
+		</div>		
+		</li><li><div>
+		<span class="cvitem"> 2011 Fall Semester's FDC Award, Presidential Design Award </span>
+		<span class="cvperiod"> Feburary 2012</span>
 		</div>		
 		</li></ul>
 	</div>
@@ -190,7 +194,7 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/">arXiv:1809.XXXXX</a>
+		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
