--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Blog: <a href="/blog/">here</a>
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
-		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid" </span>
+		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>
@@ -279,7 +279,7 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2018-08-28</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-01-31</div>
 
 </div>
 </body>
