20190219 Update index.html

--- a/index.html
+++ b/index.html
@@ -115,26 +115,26 @@ Blog: <a href="/blog/">here</a>
 	<div class="cvitemize"> Education </div>
 		<ul>
 		<li><div>
-		<span class="cvitem"> Korea Advanced Institute of Science and Technology </span>, Daejeon, Korea
+		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
 		<span class="cvperiod">March 2013 ~ Present</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics</div>
 		<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>
 		</li><li>
 		<div>
-		<span class="cvitem"> Korea Advanced Institute of Science and Technology </span>, Daejeon, Korea
+		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
 		<span class="cvperiod"> Feburary 2010 ~ Feburary 2013</span>
 		</div>
-		<div class="cvitemcontent"> B.S. in Physics, Magna Cum Laude, Feburary, 2013</div>
-		<div class="cvitemcontent"> Second major : Mathematical Sciences</div>
+		<div class="cvitemcontent"> Bachelor of Science, Magna Cum Laude, Feburary, 2013</div>
+		<div class="cvitemcontent"> Double major in Physics and Mathematical Sciences</div>
 		<div class="cvitemcontent"> Cumulative GPA : 3.79/4.3</div>		
 	
 		</li><li>
 		<div>
-		<span class="cvitem"> Hankuk University of Foreign Studies </span>, Seoul, Korea
+		<span class="cvitem"> Hankuk University of Foreign Studies</span>, Seoul, Korea
 		<span class="cvperiod"> March 2006 ~ January 2008</span>
 		</div>
-		<div class="cvitemcontent"> Undergraduate Student in Department of Physics</div>
+		<div class="cvitemcontent"> in Department of Physics</div>
 		<div class="cvitemcontent"> Cumulative GPA : 4.18/4.5</div>
 		</li></ul>	
 	</div>
@@ -179,8 +179,13 @@ Blog: <a href="/blog/">here</a>
 	</div>
 <!-- Experience --><br>
 	<div>
-	<div class="cvitemize"> Experience </div>
+	<div class="cvitemize"> Services </div>
 		<ul><li><div>
+		<span class="cvitem"> Referee </span>
+		<span class="cvperiod">September 2018 ~ Present</span>
+		</div>
+		<div class="cvitemcontent"> of <em>Phys. Rev.</em> B</div>
+		</li><li><div>
 		<span class="cvitem"> Military service </span>
 		<span class="cvperiod">Feburary 2008 ~ January 2010</span>
 		</div>
@@ -214,7 +219,7 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvitem"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">J. High Energy Phys. 02, 142</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
+		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">JHEP <b>02</b>, 142 (2015)</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
 		</li></ul>
 	</div>
 <!-- Interests --><br>
@@ -279,10 +284,47 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-01-31</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-02-19</div>
 
 </div>
 </body>
 </html>
 
+<!---
 
+	<div class="cvitemize"> Talks and Posters </div>
+		<ul><li><div>
+		<span class="cvitem"> APS March Meeting 2019 (Talk) </span>
+		<span class="cvperiod">March 2019</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://meetings.aps.org/Meeting/MAR19/Session/A06.8">"Emergent Anisotropic Non-Fermi Liquid"</a> </div>	
+
+		</li><li><div>
+		<span class="cvitem"> APS March Meeting 2018 (Talk) </span>
+		<span class="cvperiod">March 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://meetings.aps.org/Meeting/MAR18/Session/P44.12">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> APS March Meeting 2017 (Talk) </span>
+		<span class="cvperiod">March 2017</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://meetings.aps.org/Meeting/MAR17/Session/F37b.7">"Topological Phase Transitions in Dirac semi-metals of distorted spinels"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> 2018 KPS Spring Meeting (Talk) </span>
+		<span class="cvperiod">April 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://www.kps.or.kr/abstract/view.html?cid=KPS2018A&article_no=565">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> 2017 KPS Spring Meeting (Talk) </span>
+		<span class="cvperiod">April 2017</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://www.kps.or.kr/abstract/view.html?cid=KPS2018A&article_no=565">"Topological Phase Transitions in Dirac semi-metals of distorted spinels"</a> </div>	
+
+		</li></ul></ul>
+	</div> -->
