--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Blog: <a href="/blog/">here</a>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>
+		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.085149">Phys. Rev. Lett., <b>Accepted</b> 12 April 2019</a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
@@ -326,5 +326,39 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		</div>
 		<div class="cvitemcontent"> <a href="http://www.kps.or.kr/abstract/view.html?cid=KPS2018A&article_no=565">"Topological Phase Transitions in Dirac semi-metals of distorted spinels"</a> </div>	
 
+		</li>
+		<li><div>
+		<span class="cvitem"> 2016 Quantum Materials Symposium (Poster) </span>
+		<span class="cvperiod">Feburary 2016</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://home.kias.re.kr/MKG/h/QMS2016/?pageNo=1812">"Topological Phase Transitions in Line-nodal Superconductors"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> 2016 Quantum Materials Symposium (Poster) </span>
+		<span class="cvperiod">Feburary 2016</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://home.kias.re.kr/MKG/h/QMS2016/?pageNo=1812">"Topological Phase Transitions in Line-nodal Superconductors"</a> </div>	
+
 		</li></ul></ul>
 	</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
