--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>
 <br>
-pdf version of CV: <a href="CV.html">here</a>
+pdf version of CV: <a href="https://www.dropbox.com/s/8da7edkw6d5phdq/SangEun_Han_CV.pdf?dl=0">here</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
-Blog: <a href="/blog/">here</a>
+<!--Blog: <a href="/blog/">here</a>--!>
 <!-- Academic Affiliations 
 -->
 	<div>
@@ -181,6 +181,11 @@ Blog: <a href="/blog/">here</a>
 	<div>
 	<div class="cvitemize"> Services </div>
 		<ul><li><div>
+		<span class="cvitem"> Referee </span>
+		<span class="cvperiod">April 2019 ~ Present</span>
+		</div>
+		<div class="cvitemcontent"> of <em>Phys. Rev. Lett.</em></div>
+		</li><li><div>
 		<span class="cvitem"> Referee </span>
 		<span class="cvperiod">September 2018 ~ Present</span>
 		</div>
