--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ TA class materials: <a href="taclass.html">here</a>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.085149">Phys. Rev. Lett., <b>Accepted</b> 12 April 2019</a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)
+		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
