--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Curriculum Vitae of SangEun Han</title>
+<!--<title>Curriculum Vitae of SangEun Han</title>-->
+<title>SangEun Han</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes"/>
 
@@ -52,7 +53,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 </style>
 
 <style type="text/css">
-#title {font-weight:bold; font-size:150%; font-family:Open Sans;  text-align: center;}
+#title {font-weight:bold; font-size:300%; font-family:Open Sans;  text-align: center;}
 #titlecontent { font-family:Open Sans;  text-align: center; font-weight: 500;}
 
 @media screen and (max-width: 1000px){
@@ -65,7 +66,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 
 #last {width:100%; background-color:FFFFFF; text-align:center;}
 
-.cvitemize { font-weight: bold;}
+.cvitemize { font-size:110%; font-weight: bold;}
 .cvitem { font-weight: bold; font-family:Open Sans;}
 .cvperiod { float:right; font-family:Open Sans; font-style:italic;}
 .cvitemcontent { }
@@ -119,7 +120,7 @@ TA class materials: <a href="taclass.html">here</a>
 		<span class="cvperiod">March 2013 ~ Present</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics</div>
-		<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>
+		<!--<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>-->
 		</li><li>
 		<div>
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
@@ -127,7 +128,7 @@ TA class materials: <a href="taclass.html">here</a>
 		</div>
 		<div class="cvitemcontent"> Bachelor of Science, Magna Cum Laude, Feburary, 2013</div>
 		<div class="cvitemcontent"> Double major in Physics and Mathematical Sciences</div>
-		<div class="cvitemcontent"> Cumulative GPA : 3.79/4.3</div>		
+		<!--<div class="cvitemcontent"> Cumulative GPA : 3.79/4.3</div>-->	
 	
 		</li><li>
 		<div>
@@ -135,7 +136,7 @@ TA class materials: <a href="taclass.html">here</a>
 		<span class="cvperiod"> March 2006 ~ January 2008</span>
 		</div>
 		<div class="cvitemcontent"> in Department of Physics</div>
-		<div class="cvitemcontent"> Cumulative GPA : 4.18/4.5</div>
+		<!--<div class="cvitemcontent"> Cumulative GPA : 4.18/4.5</div>-->
 		</li></ul>	
 	</div>
 <!-- Scholarships --><br>
@@ -204,27 +205,27 @@ TA class materials: <a href="taclass.html">here</a>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, Eun-Gook Moon, and Hongki Min<br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 </a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)
 		</li><li><div>
 		<span class="cvitem"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
 		</li><li><div>
 		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> SangEun Han, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Gil Young Cho, and Eun-Gook Moon <br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
 		</li><li><div>
 		<span class="cvitem"> "Explaining the Lepton Non-universality at the LHCb and CMS from an Unified Framework" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, SangEun Han, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">JHEP <b>02</b>, 142 (2015)</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
+		<div class="cvitemcontent"> Sanjoy Biswas, Debtosh Chowdhury, <b><u>SangEun Han</u></b>, and Seung J. Lee <br><a href="https://doi.org/10.1007/JHEP02(2015)142">JHEP <b>02</b>, 142 (2015)</a> (<a href="https://arxiv.org/abs/1409.0882">arXiv:1409.0882</a>)</div>
 		</li></ul>
 	</div>
 <!-- Interests --><br>
@@ -287,22 +288,18 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		</div>
 		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 2 </div>
 		</li></ul></ul>
-	</div>
-	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-02-19</div>
-
-</div>
-</body>
-</html>
-
-<!---
-
-	<div class="cvitemize"> Talks and Posters </div>
+	</div><div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
 		<span class="cvitem"> APS March Meeting 2019 (Talk) </span>
 		<span class="cvperiod">March 2019</span>
 		</div>
 		<div class="cvitemcontent"> <a href="http://meetings.aps.org/Meeting/MAR19/Session/A06.8">"Emergent Anisotropic Non-Fermi Liquid"</a> </div>	
+
+		</li><li><div>
+		<span class="cvitem"> 11th BK21+ Young Physicists Workshop (Talk) </span>
+		<span class="cvperiod">February 2019</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://ph.postech.ac.kr/~ypw11/program.html">"Emergent Anisotropic Non-Fermi Liquid"</a> </div>	
 
 		</li><li><div>
 		<span class="cvitem"> APS March Meeting 2018 (Talk) </span>
@@ -333,10 +330,65 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 
 		</li>
 		<li><div>
-		<span class="cvitem"> 2016 Quantum Materials Symposium (Poster) </span>
-		<span class="cvperiod">Feburary 2016</span>
+		<span class="cvitem"> KIAS workshop on Topology and Correlation in quantum materials (Poster) </span>
+		<span class="cvperiod">May 2019</span>
 		</div>
-		<div class="cvitemcontent"> <a href="http://home.kias.re.kr/MKG/h/QMS2016/?pageNo=1812">"Topological Phase Transitions in Line-nodal Superconductors"</a> </div>	
+		<div class="cvitemcontent"> <a href="http://www.f.waseda.jp/katsuf/Meeting/JKT19.htm">"Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions
+"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> The 19th JAPAN-KOREA-TAIWAN SYMPOSIUM ON STRONGLY CORRELATED ELECTRON SYSTEMS (Poster) </span>
+		<span class="cvperiod">January 2019</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://www.f.waseda.jp/katsuf/Meeting/JKT19.htm">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> Workshop on Spin-Orbit Coupled Topological States (Poster) </span>
+		<span class="cvperiod">October 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://www.apctp.org/plan.php/SOCTS2018">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> Advanced School and Workshop on Correlations in Electron Systems - from Quantum Criticality to Topology - (Poster) </span>
+		<span class="cvperiod">August 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://indico.ictp.it/event/8330/">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> International Workshop on "New Paradigms in Quantum Matter 2018" (Poster) </span>
+		<span class="cvperiod">June 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://npqm.csp.escience.cn/dct/page/1">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
+"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> 
+KIAS workshop on Topology and Correlation (Poster) </span>
+		<span class="cvperiod">June 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://events.kias.re.kr/h/topology2018/">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> 10th BK21+ Young Physicists Workshop (Poster) </span>
+		<span class="cvperiod">Feburary 2018</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://ph.postech.ac.kr/~rpmbt19/">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators"</a> </div>	
+
+		</li>
+		<li><div>
+		<span class="cvitem"> The 19th International Conference on Recent Progress in Many-Body Theories (Poster) </span>
+		<span class="cvperiod">June 2017</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://ph.postech.ac.kr/~rpmbt19/">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators"</a> </div>	
 
 		</li>
 		<li><div>
@@ -346,7 +398,17 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		<div class="cvitemcontent"> <a href="http://home.kias.re.kr/MKG/h/QMS2016/?pageNo=1812">"Topological Phase Transitions in Line-nodal Superconductors"</a> </div>	
 
 		</li></ul></ul>
-	</div> -->
+	</div>
+	
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-09-19</div>
+
+</div>
+</body>
+</html>
+
+<!---
+
+	 -->
 
 
 
