--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:hover {text-decoration: underline; color: darkgray;}
   ga('send', 'pageview');
 
 </script>
- 
+ <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body style="background-color:#EFEFEF">
