--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>
 <br>
-pdf version of CV: <a href="https://www.dropbox.com/s/8da7edkw6d5phdq/SangEun_Han_CV.pdf?dl=0">here</a>
+pdf version of CV: <a href="https://www.dropbox.com/s/iak1jd1v74tbqa0/SangEun_Han_CV.pdf?dl=0">here</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -240,27 +240,28 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 	<div class="cvitemize"> Teaching Experiences </div>
 		<ul><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod">March 2013 ~ June 2013 </span>
+		<span class="cvperiod"> September 2017 ~ December 2017 </span>
 		</div>
-		<div class="cvitemcontent"> Course: General Physics 1 </div>	
-
-		</li><li><div>
-		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2013 ~ December 2013 </span>
-		</div>
-		<div class="cvitemcontent"> Course: General Physics 2 </div>	
-
-		</li><li><div>
-		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2014 ~ June 2014 </span>
-		</div>
-		<div class="cvitemcontent"> Course: Quantum Field Theory 2 </div>
+		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 2 </div>
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2015 ~ June 2015 </span>
+		<span class="cvperiod"> March 2017 ~ June 2017 </span>
 		</div>
-		<div class="cvitemcontent"> Course: Undergraduate Quantum Mechanics 1 </div>
+		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
+		
+		</li><li><div>
+		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
+		<span class="cvperiod"> September 2016 ~ December 2016 </span>
+		</div>
+		<div class="cvitemcontent"> Course: Colloquium & Seminar </div>
+		
+		</li><li><div>
+		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
+		<span class="cvperiod"> March 2016 ~ June 2016 </span>
+		</div>
+		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
+		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
 		<span class="cvperiod"> September 2015 ~ December 2015 </span>
@@ -269,24 +270,28 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2016 ~ June 2016 </span>
+		<span class="cvperiod"> March 2015 ~ June 2015 </span>
 		</div>
-		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
+		<div class="cvitemcontent"> Course: Undergraduate Quantum Mechanics 1 </div>
+		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2016 ~ December 2016 </span>
+		<span class="cvperiod"> March 2014 ~ June 2014 </span>
 		</div>
-		<div class="cvitemcontent"> Course: Colloquium & Seminar </div>
+		<div class="cvitemcontent"> Course: Quantum Field Theory 2 </div>
+		
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> March 2017 ~ June 2017 </span>
+		<span class="cvperiod"> September 2013 ~ December 2013 </span>
 		</div>
-		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 1 </div>
+		<div class="cvitemcontent"> Course: General Physics 2 </div>	
+
 		</li><li><div>
 		<span class="cvitem"> Teaching Assistant for the Physics Department, KAIST </span>
-		<span class="cvperiod"> September 2017 ~ December 2017 </span>
+		<span class="cvperiod">March 2013 ~ June 2013 </span>
 		</div>
-		<div class="cvitemcontent"> Course: Graduate Quantum Mechanics 2 </div>
+		<div class="cvitemcontent"> Course: General Physics 1 </div>	
+
 		</li></ul></ul>
 	</div><div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
@@ -330,6 +335,14 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 
 		</li>
 		<li><div>
+		<span class="cvitem"> The 2<sup>nd</sup> Workshop on Spin-Orbit Coupled Topological States (Poster) </span>
+		<span class="cvperiod">September 2019</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://www.apctp.org/plan.php/SOCTS2019">"Stability of Quantum Criticalities
+"</a> </div>	
+
+		</li>
+		<li><div>
 		<span class="cvitem"> KIAS workshop on Topology and Correlation in quantum materials (Poster) </span>
 		<span class="cvperiod">May 2019</span>
 		</div>
@@ -346,7 +359,7 @@ Theotical Physics, Condensed matter physics, Strongly correlated systems, Theore
 
 		</li>
 		<li><div>
-		<span class="cvitem"> Workshop on Spin-Orbit Coupled Topological States (Poster) </span>
+		<span class="cvitem"> The 1<sup>st</sup> Workshop on Spin-Orbit Coupled Topological States (Poster) </span>
 		<span class="cvperiod">October 2018</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://www.apctp.org/plan.php/SOCTS2018">"Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" / "Emergent Anisotropic Non-Fermi Liquid
@@ -400,7 +413,7 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		</li></ul></ul>
 	</div>
 	
-<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-09-19</div>
+<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-09-26</div>
 
 </div>
 </body>
